kubernetes/applications/ceph-storage/manifests/influxdb/influxdb-namespace.yml
# =====================================
# 0. Namespace for InfluxDB
# =====================================
---
apiVersion: v1
kind: Namespace
metadata:
  name: influxdb
